Fix more elements on the navbar without overflowing

--- a/resources/base.scss
+++ b/resources/base.scss
@@ -564,7 +564,7 @@ math {
     }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 860px) {
     #navigation {
         height: 36px;
     }
@@ -652,7 +652,7 @@ math {
     }
 }
 
-@media not all and (max-width: 760px) {
+@media not all and (max-width: 860px) {
     #nav-list {
         display: block !important;
 
